; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r100.c_r100_irq_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r100.c_r100_irq_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@R_000040_GEN_INT_CNTL = common dso_local global i32 0, align 4
@R_000044_GEN_INT_STATUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r100_irq_disable(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  %4 = load i32, i32* @R_000040_GEN_INT_CNTL, align 4
  %5 = call i32 @WREG32(i32 %4, i32 0)
  %6 = call i32 @mdelay(i32 1)
  %7 = load i32, i32* @R_000044_GEN_INT_STATUS, align 4
  %8 = call i32 @RREG32(i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @R_000044_GEN_INT_STATUS, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @WREG32(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @WREG32(i32, i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @RREG32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
